--- a/app/src/main/res/layout/fragment_loading_animation.xml
+++ b/app/src/main/res/layout/fragment_loading_animation.xml
@@ -18,5 +18,18 @@
         android:layout_height="100dp"
         android:visibility="visible"/>
 
+    <TextView
+        android:id="@+id/text1"
+        android:maxLines="3"
+        android:ellipsize="end"
+        android:textSize="16sp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="100dp"
+        android:layout_gravity="bottom"
+        android:textColor="@color/black"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
 
 </FrameLayout>
