--- a/app/src/main/res/layout/fragment_video_play.xml
+++ b/app/src/main/res/layout/fragment_video_play.xml
@@ -117,10 +117,11 @@
             android:layout_height="40dp"/>
 
         <TextView
-            android:layout_width="60dp"
-            android:id="@id/text22"
+            android:layout_width="wrap_content"
+            android:id="@id/add_water_mask"
             android:gravity="center"
             android:padding="5dp"
+            android:text="add watermask"
             android:textColor="@color/black"
             android:layout_height="40dp"/>
 
