--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,4 +20,8 @@
         <item name="android:windowIsTranslucent">true</item>
     </style>
 
+    <style name="AnimationActivity">
+        <item name="android:windowContentTransitions">true</item>
+    </style>
+
 </resources>
