--- a/app/src/main/res/layout/fragment_video_play.xml
+++ b/app/src/main/res/layout/fragment_video_play.xml
@@ -33,7 +33,7 @@
 
         <ImageView
             android:id="@id/play_button"
-            android:src="@mipmap/ic_launcher"
+            android:src="@drawable/ic_launcher"
             android:layout_gravity="center"
             android:layout_width="50dp"
             android:layout_height="50dp"/>
