--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,7 +70,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="other"
+                android:text="github"
                 android:textColor="@color/black"/>
         </LinearLayout>
     </LinearLayout>
