--- a/app/src/main/res/layout/fragment_custom_cardview.xml
+++ b/app/src/main/res/layout/fragment_custom_cardview.xml
@@ -45,8 +45,7 @@
 
         <ImageView
             android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@mipmap/a"/>
+            android:layout_height="100dp"/>
     </com.github.captain_miao.optroundcardview.OptRoundCardView>
 
 
