--- a/app/src/main/res/layout/fragment_slide_panel.xml
+++ b/app/src/main/res/layout/fragment_slide_panel.xml
@@ -20,8 +20,7 @@
         android:layout_height="50dp"
         android:layout_gravity="left|bottom"
         android:layout_marginLeft="50dp"
-        android:layout_marginBottom="100dp"
-        android:src="@mipmap/image_06"/>
+        android:layout_marginBottom="100dp"/>
 
 
     <ImageView
@@ -30,7 +29,6 @@
         android:layout_height="50dp"
         android:layout_marginRight="50dp"
         android:layout_marginBottom="100dp"
-        android:layout_gravity="right|bottom"
-        android:src="@mipmap/emoji_11"/>
+        android:layout_gravity="right|bottom"/>
 
 </FrameLayout>
