--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -95,6 +95,7 @@
     <item name="image8" type="id">image8</item>
     <item name="image9" type="id">image9</item>
     <item name="image10" type="id">image10</item>
+    <item name="ball_move_view" type="id">ball_move_view</item>
 
 
 </resources>
