--- a/app/src/main/res/layout/fragment_graphics_2d.xml
+++ b/app/src/main/res/layout/fragment_graphics_2d.xml
@@ -60,6 +60,10 @@
             android:layout_height="match_parent"
             android:text="(4) WatchView"
             android:textSize="20sp"/>
+
+        <com.lpan.study.view.WatchView
+            android:layout_width="match_parent"
+            android:layout_height="200dp"/>
     </LinearLayout>
 
 </ScrollView>
