--- a/app/src/main/res/layout/fragment_java_test.xml
+++ b/app/src/main/res/layout/fragment_java_test.xml
@@ -20,8 +20,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:layout_height="50dp">
+        android:layout_height="50dp"
+        android:orientation="horizontal">
 
         <EditText
             android:id="@id/edit2"
@@ -45,18 +45,31 @@
             android:hint="第二个数"
             android:inputType="numberSigned"
             android:textSize="14sp"/>
+
         <TextView
             android:id="@id/text2"
-            android:text="计算"
-            android:gravity="center"
-            android:background="@drawable/button_bg_gray"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:background="@drawable/button_bg_gray"
+            android:gravity="center"
+            android:text="计算"/>
     </LinearLayout>
 
     <TextView
         android:id="@id/text3"
         android:layout_width="match_parent"
         android:layout_height="50dp"/>
+
+    <TextView
+        android:id="@id/text4"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:gravity="center_vertical"
+        android:text="3.rxjava demo"/>
+
+    <ImageView
+        android:id="@id/image1"
+        android:layout_width="200dp"
+        android:layout_height="200dp"/>
 
 </LinearLayout>
