--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -96,6 +96,7 @@
     <item name="image9" type="id">image9</item>
     <item name="image10" type="id">image10</item>
     <item name="ball_move_view" type="id">ball_move_view</item>
+    <item name="cardview" type="id">cardview</item>
 
 
 </resources>
