--- a/app/src/main/res/layout/fragment_custom_cardview.xml
+++ b/app/src/main/res/layout/fragment_custom_cardview.xml
@@ -1,22 +1,57 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="@color/blue"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:background="@color/white"
               android:orientation="vertical">
 
 
-        <TextView
-            android:id="@+id/section_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/activity_horizontal_margin"
-            android:text="skdksdlkslslssmdkdk"/>
+    <android.support.v7.widget.CardView
+        android:id="@id/cardview"
+        android:layout_width="match_parent"
+        app:cardBackgroundColor="@color/gray"
+        app:cardCornerRadius="15dp"
+        android:layout_margin="10dp"
+        android:layout_height="300dp">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="20dp">
 
+            <com.lpan.study.view.CircleImageView
+                android:id="@id/circle_image"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center"/>
 
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:text="name:   liaopan"
+                android:textColor="@color/black"
+                android:textSize="18sp"/>
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="email:   liaopan1992@126.com"
+                android:textColor="@color/black"
+                android:textSize="18sp"/>
 
+            <TextView
+                android:layout_width="match_parent"
+
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="location:   Beijing,China"
+                android:textColor="@color/black"
+                android:textSize="18sp"/>
+
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
 </LinearLayout>
