--- a/app/src/main/res/layout/fragment_loading_animation.xml
+++ b/app/src/main/res/layout/fragment_loading_animation.xml
@@ -2,34 +2,18 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="@color/blue"
+              android:background="@color/white"
               android:orientation="vertical">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp">
-
-    </FrameLayout>
 
 
-    <com.lpan.study.view.smilefaceview.SimleLoadingView
+    <com.lpan.study.view.smilefaceview.SmileLoadingView
         android:id="@id/smile"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_gravity="center"
         android:visibility="visible"/>
 
-    <TextView
-        android:id="@+id/text1"
-        android:maxLines="3"
-        android:ellipsize="end"
-        android:textSize="16sp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="100dp"
-        android:layout_gravity="bottom"
-        android:textColor="@color/black"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
 
 
 </FrameLayout>
