--- a/app/src/main/res/layout/smile_layout.xml
+++ b/app/src/main/res/layout/smile_layout.xml
@@ -8,27 +8,27 @@
 
     <com.lpan.study.view.smilefaceview.SmileFaceView
         android:id="@+id/smileView1"
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_height="100dp"/>
+        android:layout_height="wrap_content"/>
 
     <com.lpan.study.view.smilefaceview.SmileEyesView
         android:id="@+id/smileView2"
         android:layout_gravity="center_horizontal"
-        android:layout_width="100dp"
-        android:layout_height="100dp"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
     <com.lpan.study.view.smilefaceview.SmileLeftEyeView
         android:id="@+id/smileView3"
         android:layout_gravity="center_horizontal"
-        android:layout_width="100dp"
-        android:layout_height="100dp"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
     <com.lpan.study.view.smilefaceview.SmileRightEyeView
         android:id="@+id/smileView4"
         android:layout_gravity="center_horizontal"
-        android:layout_width="100dp"
-        android:layout_height="100dp"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 
 </FrameLayout>
