optimize audio focus

--- a/app/src/main/res/layout/fragment_audiofocus_test.xml
+++ b/app/src/main/res/layout/fragment_audiofocus_test.xml
@@ -15,6 +15,7 @@
             android:id="@id/play_button"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:src="@drawable/music_pause_icon"
             android:background="@color/colorPlayerProgressBg"
             android:scaleType="centerInside"
             android:layout_gravity="center_vertical"/>
@@ -45,5 +46,11 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    <TextView
+        android:id="@id/text1"
+        android:layout_margin="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
