--- a/app/src/main/res/layout/fragment_video_play_statu.xml
+++ b/app/src/main/res/layout/fragment_video_play_statu.xml
@@ -28,11 +28,11 @@
 
     </LinearLayout>
 
-    <com.lpan.study.view.ThrobbingNoteView
+    <com.lpan.study.view.MusicWaveView
         android:id="@+id/throbbing_note_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    </com.lpan.study.view.ThrobbingNoteView>
+    </com.lpan.study.view.MusicWaveView>
 
 </LinearLayout>
