--- a/app/src/main/res/layout/fragment_video_play.xml
+++ b/app/src/main/res/layout/fragment_video_play.xml
@@ -33,7 +33,7 @@
 
         <ImageView
             android:id="@id/play_button"
-            android:src="@drawable/ic_launcher"
+            android:src="@drawable/music_pause_icon"
             android:layout_gravity="center"
             android:layout_width="50dp"
             android:layout_height="50dp"/>
@@ -59,79 +59,41 @@
     <TextView
         android:id="@id/button1"
         android:textColor="@color/black"
-        android:text="转码"
+        android:text="transform video"
         android:gravity="center"
-        android:background="@drawable/button_bg_green"
+        android:background="@drawable/button_bg_gray"
         android:layout_width="match_parent"
         android:layout_height="40dp"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:id="@id/text1"
-            android:text="ultrafast"
-            android:gravity="center"
-            android:padding="5dp"
-            android:background="@drawable/button_bg_green"
-            android:textColor="@color/black"
-            android:layout_height="40dp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:id="@id/text2"
-            android:text="superfast"
-            android:gravity="center"
-            android:padding="5dp"
-            android:background="@drawable/button_bg_green"
-            android:textColor="@color/black"
-            android:layout_height="40dp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:id="@id/text3"
-            android:text="fast"
-            android:gravity="center"
-            android:padding="5dp"
-            android:background="@drawable/button_bg_green"
-            android:textColor="@color/black"
-            android:layout_height="40dp"/>
-
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="horizontal"
-        android:background="@drawable/button_bg_green"
+        android:layout_marginTop="5dp"
+        android:weightSum="2"
         android:layout_height="wrap_content">
 
         <TextView
+            android:layout_weight="1"
             android:layout_width="60dp"
             android:id="@id/hflip"
             android:gravity="center"
             android:padding="5dp"
-            android:text="hflip"
+            android:text="hflip video"
+            android:background="@drawable/button_bg_gray"
             android:textColor="@color/black"
             android:layout_height="40dp"/>
 
         <TextView
+            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:id="@id/add_water_mask"
             android:gravity="center"
             android:padding="5dp"
             android:text="add watermask"
+            android:background="@drawable/button_bg_gray"
             android:textColor="@color/black"
             android:layout_height="40dp"/>
 
-        <TextView
-            android:layout_width="60dp"
-            android:id="@id/text23"
-            android:gravity="center"
-            android:padding="5dp"
-            android:textColor="@color/black"
-            android:layout_height="40dp"/>
     </LinearLayout>
 
 
