--- a/app/src/main/res/layout/fragment_video_play.xml
+++ b/app/src/main/res/layout/fragment_video_play.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
               android:layout_width="match_parent"
+              android:layout_height="match_parent"
               android:background="@color/black"
-              android:layout_height="match_parent">
+              android:orientation="vertical">
 
     <FrameLayout
         android:layout_width="wrap_content"
@@ -11,11 +11,11 @@
 
         <TextView
             android:id="@id/text"
-            android:textColor="@color/white"
             android:layout_width="wrap_content"
-            android:text="本地视频"
+            android:layout_height="30dp"
             android:gravity="center"
-            android:layout_height="30dp"/>
+            android:text="本地视频"
+            android:textColor="@color/white"/>
 
         <com.lpan.study.view.TextureVideoView
             android:id="@id/textureview"
@@ -24,19 +24,19 @@
 
         <TextView
             android:id="@id/duration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="bottom|right"
             android:layout_marginBottom="10dp"
             android:layout_marginRight="10dp"
-            android:textColor="@color/white"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:textColor="@color/white"/>
 
         <ImageView
             android:id="@id/play_button"
-            android:src="@drawable/music_pause_icon"
-            android:layout_gravity="center"
             android:layout_width="50dp"
-            android:layout_height="50dp"/>
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:src="@drawable/music_pause_icon"/>
 
 
     </FrameLayout>
@@ -46,55 +46,64 @@
         android:id="@id/seekbar"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
         android:focusable="true"
         android:maxHeight="2dp"
         android:minHeight="2dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="15dp"
-        android:thumb="@drawable/seekbar_thumb"
         android:progressDrawable="@drawable/seekbar_progress"
+        android:thumb="@drawable/seekbar_thumb"
         />
 
     <TextView
         android:id="@id/button1"
-        android:textColor="@color/black"
-        android:text="transform video"
-        android:gravity="center"
-        android:background="@drawable/button_bg_gray"
         android:layout_width="match_parent"
-        android:layout_height="40dp"/>
+        android:layout_height="40dp"
+        android:background="@drawable/button_bg_gray"
+        android:gravity="center"
+        android:text="transform video"
+        android:textColor="@color/black"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:orientation="horizontal"
+        android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:weightSum="2"
-        android:layout_height="wrap_content">
+        android:orientation="horizontal"
+        android:weightSum="2">
 
         <TextView
-            android:layout_weight="1"
-            android:layout_width="60dp"
             android:id="@id/hflip"
+            android:layout_width="60dp"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:background="@drawable/button_bg_gray"
             android:gravity="center"
             android:padding="5dp"
             android:text="hflip video"
-            android:background="@drawable/button_bg_gray"
-            android:textColor="@color/black"
-            android:layout_height="40dp"/>
+            android:textColor="@color/black"/>
 
         <TextView
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
             android:id="@id/add_water_mask"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:background="@drawable/button_bg_gray"
             android:gravity="center"
             android:padding="5dp"
             android:text="add watermask"
-            android:background="@drawable/button_bg_gray"
-            android:textColor="@color/black"
-            android:layout_height="40dp"/>
+            android:textColor="@color/black"/>
 
     </LinearLayout>
+
+    <TextView
+        android:id="@id/add_water_mask"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/button_bg_gray"
+        android:padding="5dp"
+        android:text="提示:\n(1)在点击transform/hflip/add watermask video按钮之前,需要在/storage/emulated/0/a_panda/目录下放置名称为transform.mp4,hflip.mp4,logo.png的测试文件;\n(2)输出的文件也在该目录下; "
+        android:textColor="@color/black"/>
 
 
 </LinearLayout>
