optimize scan video

--- a/app/src/main/res/layout/fragment_scan_gallery.xml
+++ b/app/src/main/res/layout/fragment_scan_gallery.xml
@@ -1,12 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
-        <ListView
-            android:id="@id/listview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:orientation="vertical">
 
-        </ListView>
-</LinearLayout>
+    <com.lpan.study.view.smilefaceview.SmileLoadingView
+        android:id="@id/smileloadinbg"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:visibility="gone"
+        android:layout_gravity="center">
+
+    </com.lpan.study.view.smilefaceview.SmileLoadingView>
+
+    <ListView
+        android:id="@id/listview"
+        android:padding="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </ListView>
+</FrameLayout>
