--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:orientation="vertical">
+
+    <com.lpan.study.view.smilefaceview.SmileLoadingView
+        android:id="@id/smileloadinbg"
+        android:layout_width="100dp"
+        android:visibility="gone"
+        android:layout_height="100dp">
+
+    </com.lpan.study.view.smilefaceview.SmileLoadingView>
+
     <android.support.v7.widget.RecyclerView
         android:id="@id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
     </android.support.v7.widget.RecyclerView>
-</LinearLayout>
+
+</FrameLayout>
