--- a/app/src/main/res/layout/item_gallery.xml
+++ b/app/src/main/res/layout/item_gallery.xml
@@ -3,7 +3,7 @@
               android:orientation="vertical"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content">
-    <ImageView
+    <com.lpan.study.view.BaseImageView
         android:id="@id/image1"
         android:scaleType="centerCrop"
         android:layout_width="wrap_content"
