--- a/app/src/main/res/layout/fragment_trans_animation.xml
+++ b/app/src/main/res/layout/fragment_trans_animation.xml
@@ -2,39 +2,89 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:padding="5dp"
-              android:orientation="vertical">
+              android:orientation="vertical"
+              android:padding="5dp">
 
     <TextView
-        android:id="@+id/text1"
+        android:id="@id/text1"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:gravity="center"
         android:background="@drawable/button_bg_gray"
+        android:gravity="center"
         android:text="1 no animation"/>
 
     <TextView
-        android:id="@+id/text2"
+        android:id="@id/text2"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:gravity="center"
         android:background="@drawable/button_bg_gray"
+        android:gravity="center"
         android:text="2 up animation"/>
 
     <TextView
-        android:id="@+id/text3"
+        android:id="@id/text3"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:gravity="center"
         android:background="@drawable/button_bg_gray"
+        android:gravity="center"
         android:text="3 fade animation"/>
 
 
     <TextView
-        android:id="@+id/text4"
+        android:id="@id/text4"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:gravity="center"
         android:background="@drawable/button_bg_gray"
+        android:gravity="center"
         android:text="4 long fade animation"/>
+
+    <TextView
+        android:id="@id/text5"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@drawable/button_bg_gray"
+        android:gravity="center"
+        android:text="5 slide21"/>
+
+    <TextView
+        android:id="@id/text6"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@drawable/button_bg_gray"
+        android:gravity="center"
+        android:text="6 explode21"/>
+
+    <TextView
+        android:id="@id/text7"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@drawable/button_bg_gray"
+        android:gravity="center"
+        android:text="7 fade21"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <TextView
+            android:id="@id/text8"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@drawable/button_bg_gray"
+            android:gravity="center"
+            android:layout_marginTop="100dp"
+            android:transitionName="textview"
+            android:text="element1"/>
+
+        <TextView
+            android:id="@id/text9"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_gravity="bottom"
+            android:background="@drawable/button_bg_gray"
+            android:gravity="center"
+            android:transitionName="textview2"
+            android:text="element2"/>
+    </LinearLayout>
+
 </LinearLayout>
