--- a/app/src/main/res/layout/item_gallery.xml
+++ b/app/src/main/res/layout/item_gallery.xml
@@ -5,7 +5,7 @@
               android:layout_height="wrap_content">
     <com.lpan.study.view.BaseImageView
         android:id="@id/image1"
-        android:scaleType="centerCrop"
+        android:scaleType="centerInside"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 </LinearLayout>
