--- a/app/src/main/res/layout/item_pager_image_detail.xml
+++ b/app/src/main/res/layout/item_pager_image_detail.xml
@@ -3,9 +3,9 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-    <ImageView
+    <com.lpan.study.view.BaseImageView
         android:id="@id/image1"
         android:layout_width="match_parent"
-        android:scaleType="fitCenter"
+        android:scaleType="centerInside"
         android:layout_height="match_parent"/>
 </LinearLayout>
