--- a/app/src/main/res/layout/fragment_matrix.xml
+++ b/app/src/main/res/layout/fragment_matrix.xml
@@ -7,15 +7,38 @@
     <View
         android:id="@id/maskView"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
         android:background="@color/white"/>
 
-
-    <com.lpan.study.view.MatrixImageView
-        android:id="@id/image1"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_marginBottom="50dp"/>
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        >
+
+        <com.lpan.study.view.MatrixImageView
+            android:id="@id/image1"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_marginRight="1.5dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"/>
+
+        <com.lpan.study.view.MatrixImageView
+            android:id="@id/image2"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_marginLeft="1.5dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"/>
+
+    </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -50,5 +73,14 @@
             android:background="@drawable/button_bg_gray"
             android:gravity="center"
             android:text="rotate"/>
+
+        <TextView
+            android:id="@id/text4"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/button_bg_gray"
+            android:gravity="center"
+            android:text="save image"/>
     </LinearLayout>
 </FrameLayout>
