add classroom view

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="green">#6fca3b</color>
     <color name="jiemo_color">#6cc158</color>
     <color name="hint_gray">#cccccc</color>
+    <color name="yellow">#EEC300</color>
 
 
     <!--cbprogressbar-->
