--- a/app/src/main/res/layout/fragment_loading_animation.xml
+++ b/app/src/main/res/layout/fragment_loading_animation.xml
@@ -15,5 +15,8 @@
         android:visibility="visible"/>
 
 
-
+    <com.lpan.study.view.HalfOvalView
+        android:id="@+id/half_oval_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </FrameLayout>
