--- a/app/src/main/res/layout/fragment_shimmer.xml
+++ b/app/src/main/res/layout/fragment_shimmer.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:background="@color/bg_f2"
               android:layout_height="match_parent">
 
-    <include layout="@layout/shimmer_layout_f2"/>
-</FrameLayout>
+    <!--<include layout="@layout/shimmer_layout_f2"/>-->
+
+    <include layout="@layout/shimmer_layout_tape_chat_receive"/>
+
+</LinearLayout>
