--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -37,5 +37,6 @@
     <color name="smile_loading_color">#E8EAEB</color>
     <color name="ebebeb">#EBEBEB</color>
     <color name="gray2">#8A9499</color>
+    <color name="preset_01">#ebedee</color>
 
 </resources>
