--- a/app/src/main/res/layout/fragment_animation.xml
+++ b/app/src/main/res/layout/fragment_animation.xml
@@ -8,105 +8,110 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_gravity="bottom"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@id/alpha"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:background="@drawable/button_bg_gray"
-            android:gravity="center"
-            android:text="alpha"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@id/alpha"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:background="@drawable/button_bg_gray"
+                android:gravity="center"
+                android:text="alpha"/>
 
 
-        <TextView
-            android:id="@id/rotation"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:background="@drawable/button_bg_gray"
-            android:gravity="center"
-            android:text="rotation"/>
+            <TextView
+                android:id="@id/rotation"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:background="@drawable/button_bg_gray"
+                android:gravity="center"
+                android:text="rotation"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@id/translationX"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:background="@drawable/button_bg_gray"
+                android:gravity="center"
+                android:text="translationX"/>
+
+            <TextView
+                android:id="@id/translationY"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:background="@drawable/button_bg_gray"
+                android:gravity="center"
+                android:text="translationY"/>
+
+            <TextView
+                android:id="@id/scaleX"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:background="@drawable/button_bg_gray"
+                android:gravity="center"
+                android:text="scaleX"/>
+
+            <TextView
+                android:id="@id/scaleY"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:background="@drawable/button_bg_gray"
+                android:gravity="center"
+                android:text="scaleY"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@id/animatorset"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:background="@drawable/button_bg_gray"
+                android:gravity="center"
+                android:text="animatorset"/>
+
+            <TextView
+                android:id="@id/animatorxml"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:background="@drawable/button_bg_gray"
+                android:gravity="center"
+                android:text="animator from xml"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
-        android:orientation="horizontal">
 
-        <TextView
-            android:id="@id/translationX"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:background="@drawable/button_bg_gray"
-            android:gravity="center"
-            android:text="translationX"/>
-
-        <TextView
-            android:id="@id/translationY"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:background="@drawable/button_bg_gray"
-            android:gravity="center"
-            android:text="translationY"/>
-
-        <TextView
-            android:id="@id/scaleX"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:background="@drawable/button_bg_gray"
-            android:gravity="center"
-            android:text="scaleX"/>
-
-        <TextView
-            android:id="@id/scaleY"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:background="@drawable/button_bg_gray"
-            android:gravity="center"
-            android:text="scaleY"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="103dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@id/animatorset"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:background="@drawable/button_bg_gray"
-            android:gravity="center"
-            android:text="animatorset"/>
-
-        <TextView
-            android:id="@id/animatorxml"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:background="@drawable/button_bg_gray"
-            android:gravity="center"
-            android:text="animator from xml"/>
-
-    </LinearLayout>
-
-
-    <TextView
+    <View
         android:id="@id/text1"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
-        android:gravity="center"
-        android:text="ObjectAnimator"/>
+        android:background="@color/blue"/>
 
 </FrameLayout>
