--- a/app/src/main/res/layout/fragment_classroom.xml
+++ b/app/src/main/res/layout/fragment_classroom.xml
@@ -1,65 +1,125 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:background="@color/hint_gray"
-             android:orientation="horizontal">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/hint_gray"
+              android:orientation="vertical">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerview"
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="@color/black"/>
+
+    <com.lpan.study.view.HalfOvalView
+        android:layout_width="match_parent"
+        android:layout_height="23dp"/>
+
+
+    <FrameLayout
+        android:id="@id/layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    </android.support.v7.widget.RecyclerView>
 
-    <TextView
-        android:id="@+id/top_tag"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:background="@color/gray"
-        android:text="top"/>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </android.support.v7.widget.RecyclerView>
 
-    <TextView
-        android:id="@+id/left_tag"
-        android:layout_width="30dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:background="@color/red"
-        android:text="left"/>
+        <TextView
+            android:id="@+id/top_tag"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/gray"
+            android:gravity="center"
+            android:text="top"/>
 
-    <TextView
-        android:id="@+id/center_tag"
-        android:layout_width="30dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:background="@color/yellow"
-        android:text="center"/>
+        <TextView
+            android:id="@+id/left_tag"
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"
+            android:background="@color/red"
+            android:gravity="center"
 
-    <TextView
-        android:id="@+id/right_tag"
-        android:layout_width="30dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:background="@color/blue"
-        android:text="right"/>
+            android:text="left"/>
 
-    <TextView
-        android:id="@+id/bottom_tag"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:background="@color/green"
-        android:text="bottom"/>
+        <TextView
+            android:id="@+id/center_tag"
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"
+            android:background="@color/yellow"
+            android:gravity="center"
 
-    <View
-        android:id="@+id/left_line"
-        android:layout_width="1dp"
-        android:layout_height="100dp"
-        android:background="@color/red"/>
+            android:text="center"/>
 
-    <View
-        android:id="@+id/right_line"
-        android:layout_width="1dp"
-        android:layout_height="100dp"
-        android:background="@color/red"/>
-</FrameLayout>
+        <TextView
+            android:id="@+id/right_tag"
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"
+            android:background="@color/blue"
+            android:gravity="center"
+
+            android:text="right"/>
+
+        <TextView
+            android:id="@+id/bottom_tag"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/green"
+            android:gravity="center"
+
+            android:text="bottom"/>
+
+        <com.lpan.study.view.BrokenLineView
+            android:id="@+id/left_line"
+            android:layout_width="2dp"
+            android:layout_height="100dp"/>
+
+        <com.lpan.study.view.BrokenLineView
+            android:id="@+id/right_line"
+            android:layout_width="2dp"
+            android:layout_height="100dp"/>
+
+        <com.lpan.study.view.pathanimation.PaperPlaneView
+            android:id="@+id/paper_plane1"
+            android:layout_width="23dp"
+            android:layout_height="23dp"
+            android:src="@drawable/circle_gray_5dp"
+            android:visibility="visible"/>
+
+        <com.lpan.study.view.pathanimation.PaperPlaneView
+            android:id="@+id/paper_plane2"
+            android:layout_width="23dp"
+            android:layout_height="23dp"
+            android:src="@drawable/circle_gray_5dp"
+            android:visibility="visible"/>
+
+        <com.lpan.study.view.pathanimation.PaperPlaneView
+            android:id="@+id/paper_plane3"
+            android:layout_width="23dp"
+            android:layout_height="23dp"
+            android:src="@drawable/circle_gray_5dp"
+            android:visibility="visible"/>
+
+        <com.lpan.study.view.pathanimation.PaperPlaneView
+            android:id="@+id/paper_plane4"
+            android:layout_width="23dp"
+            android:layout_height="23dp"
+            android:src="@drawable/circle_gray_5dp"
+            android:visibility="visible"/>
+
+        <com.lpan.study.view.pathanimation.PaperPlaneView
+            android:id="@+id/paper_plane5"
+            android:layout_width="23dp"
+            android:layout_height="23dp"
+            android:src="@drawable/circle_gray_5dp"
+            android:visibility="visible"/>
+
+
+    </FrameLayout>
+
+
+
+
+</LinearLayout>
