--- a/app/src/main/res/layout/fragment_java_test.xml
+++ b/app/src/main/res/layout/fragment_java_test.xml
@@ -67,9 +67,30 @@
         android:gravity="center_vertical"
         android:text="3.rxjava demo"/>
 
-    <ImageView
-        android:id="@id/image1"
-        android:layout_width="200dp"
-        android:layout_height="200dp"/>
+    <EditText
+        android:id="@id/edit5"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:inputType="numberSigned"
+        android:hint="输入时间戳"/>
+
+    <TextView
+        android:paddingLeft="15dp"
+        android:id="@+id/text5"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@drawable/button_bg_gray"
+        android:gravity="center_vertical"
+        android:text="点击转换"/>
+
+
+    <TextView
+        android:paddingLeft="15dp"
+        android:id="@+id/text6"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@drawable/button_bg_gray"
+        android:gravity="center_vertical"
+        android:text="根据正切值求角度"/>
 
 </LinearLayout>
