--- a/app/src/main/res/layout/item_image_and_text.xml
+++ b/app/src/main/res/layout/item_image_and_text.xml
@@ -7,14 +7,12 @@
     <FrameLayout
         android:id="@+id/wrapper"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:paddingTop="10dp">
+        android:layout_height="wrap_content">
 
         <com.lpan.study.view.CircleImageView
             android:id="@+id/image1"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="23dp"
+            android:layout_height="23dp"
             android:src="@drawable/inspire"/>
     </FrameLayout>
 
