--- a/app/src/main/res/layout/layout_popup_see_pofile.xml
+++ b/app/src/main/res/layout/layout_popup_see_pofile.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="150dp"
-             android:layout_height="40dp"
-             android:background="@color/gray"
-             android:padding="10dp">
+             android:layout_height="60dp"
+             android:background="@color/gray">
 
     <LinearLayout
         android:layout_width="wrap_content"
