--- a/app/src/main/res/layout/item_sticky_header.xml
+++ b/app/src/main/res/layout/item_sticky_header.xml
@@ -2,12 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+              android:layout_height="match_parent">
 
     <TextView
         android:id="@id/text1"
+        android:background="@color/gray"
         android:layout_width="match_parent"
-        android:paddingLeft="10dp"
         android:gravity="center_vertical"
+        android:paddingLeft="10dp"
         android:layout_height="40dp"/>
 </LinearLayout>
