--- a/app/src/main/res/layout/actionbar_layout.xml
+++ b/app/src/main/res/layout/actionbar_layout.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:id="@id/action_bar_background"
              android:layout_width="match_parent"
              android:layout_height="@dimen/actionbar_height"
-             android:id="@id/action_bar_background"
              android:background="@color/hint_gray">
 
     <FrameLayout
         android:id="@id/actionbar_left"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_gravity="left"
         >
 
         <TextView
@@ -16,20 +17,19 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:text="back"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
-            android:visibility="gone"
             android:textColor="@color/black"
-            android:textSize="18sp"/>
+            android:textSize="18sp"
+            android:visibility="gone"/>
 
         <ImageView
             android:id="@id/actionbar_left_icon"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:paddingRight="15dp"
             android:paddingLeft="15dp"
-            android:src="@drawable/actionbar_back_gray"
+            android:paddingRight="15dp"
+            android:src="@drawable/actionbar_left_icon_default"
             android:visibility="visible"/>
 
     </FrameLayout>
@@ -38,24 +38,40 @@
         android:id="@id/actionbar_title"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="title"
         android:layout_marginLeft="60dp"
         android:layout_marginRight="60dp"
+        android:gravity="center"
         android:textColor="@color/black"
         android:textSize="16sp"/>
 
-    <TextView
-        android:id="@id/actionbar_right_text"
+    <FrameLayout
+        android:id="@id/actionbar_left"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="right"
-        android:gravity="center"
-        android:padding="15dp"
-        android:text="more"
-        android:visibility="gone"
-        android:textColor="@color/black"
-        android:textSize="16sp"/>
+        >
+
+        <TextView
+            android:id="@id/actionbar_right_text"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="right"
+            android:gravity="center"
+            android:padding="15dp"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:visibility="gone"/>
+
+        <ImageView
+            android:id="@id/actionbar_right_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:src="@drawable/actionbar_right_icon_default"
+            android:visibility="gone"/>
+
+    </FrameLayout>
 
 
 </FrameLayout>
