--- a/app/src/main/res/layout/fragment_cancas_and_paint.xml
+++ b/app/src/main/res/layout/fragment_cancas_and_paint.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <include layout="@layout/actionbar"/>
+        <include layout="@layout/actionbar_layout"/>
 
         <TextView
             android:layout_width="match_parent"
