--- a/app/src/main/res/layout/fragment_graphics_2d.xml
+++ b/app/src/main/res/layout/fragment_graphics_2d.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <include layout="@layout/actionbar"/>
+        <include layout="@layout/actionbar_layout"/>
 
         <TextView
             android:layout_width="match_parent"
