--- a/app/src/main/res/layout/fragment_glide.xml
+++ b/app/src/main/res/layout/fragment_glide.xml
@@ -104,7 +104,7 @@
             android:layout_weight="1"
             android:background="@drawable/button_bg_gray"
             android:gravity="center"
-            android:text="circle"/>
+            android:text="multi"/>
 
         <TextView
             android:id="@id/text10"
