--- a/app/src/main/res/layout/fragment_graphics_2d.xml
+++ b/app/src/main/res/layout/fragment_graphics_2d.xml
@@ -10,8 +10,10 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <include layout="@layout/actionbar_layout"/>
-
+        <com.lpan.study.view.actionbar.MyActionbarView
+            android:id="@id/my_actionbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
