--- a/app/src/main/res/layout/fragment_http_study.xml
+++ b/app/src/main/res/layout/fragment_http_study.xml
@@ -3,10 +3,16 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
+
     <com.lpan.study.view.actionbar.MyActionbarView
         android:id="@id/my_actionbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"/>
 
-    </com.lpan.study.view.actionbar.MyActionbarView>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </android.support.v7.widget.RecyclerView>
 </LinearLayout>
