--- a/app/src/main/res/layout/view_my_actionbar.xml
+++ b/app/src/main/res/layout/view_my_actionbar.xml
@@ -3,6 +3,7 @@
     android:id="@id/actionbar_background"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="@color/black_55"
     android:layout_height="wrap_content">
 
 
